--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ certifi==2025.1.31
 charset-normalizer==3.4.1
 contourpy==1.3.1
 cycler==0.12.1
+defusedxml==0.7.1
 filelock==3.17.0
 fonttools==4.56.0
 fsspec==2025.3.0
@@ -9,6 +10,7 @@ huggingface-hub==0.29.3
 idna==3.10
 Jinja2==3.1.6
 kiwisolver==1.4.8
+lap==0.5.12
 MarkupSafe==3.0.2
 matplotlib==3.10.1
 mpmath==1.3.0
@@ -28,6 +30,7 @@ nvidia-nccl-cu12==2.21.5
 nvidia-nvjitlink-cu12==12.4.127
 nvidia-nvtx-cu12==12.4.127
 opencv-python==4.11.0.86
+opencv-python-headless==4.11.0.86
 packaging==24.2
 pandas==2.2.3
 pillow==11.1.0
@@ -49,6 +52,6 @@ tqdm==4.67.1
 triton==3.2.0
 typing_extensions==4.12.2
 tzdata==2025.1
-ultralytics==8.3.89
+ultralytics==8.3.88
 ultralytics-thop==2.0.14
 urllib3==2.3.0
